--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
@@ -17,3 +18,8 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: UiPathRunJob@2
+  inputs:
+    orchestratorConnection: 'UipathIntegration'
+    processName: 'AdactinProcessAutomation'
+    folderName: 'Raminaidu UIPathStudio'
